# cerfacs-training-kokkos

./: README.md
exercices/: .gitignore  readme.md
exercices/00-know-your-hardware/: .answers.md
exercices/00-know-your-hardware/saxpy_cuda_cpp/: .gitignore  CudaTimer.h  README.md  my_cuda_utils.h  saxpy.cu
exercices/01-build-kokkos/: Readme.md
exercices/02-build-a-kokkos-app-with-cmake/: Readme.md
exercices/02-build-a-kokkos-app-with-cmake/kokkos-demo-application/: CMakeLists.txt
exercices/02-build-a-kokkos-app-with-cmake/kokkos-demo-application/cmake/: build_or_find_kokkos.cmake
exercices/03-saxpy/: .gitignore  Readme.md
exercices/03-saxpy/Kokkos-Lambda/: CMakeLists.txt  Makefile  Readme.md  job.sh  saxpy_solution.cpp  saxpy_solution2.cpp
exercices/03-saxpy/Kokkos-Lambda/cmake/: build_or_find_kokkos.cmake
exercices/03-saxpy/OpenMP/: Makefile
exercices/03-saxpy/Serial/: Makefile
exercices/04-mandelbrot/kokkos_mdrange/: Readme.md
exercices/04-mandelbrot/kokkos_mdrange/src/: mandelbrot.h
exercices/04-mandelbrot/kokkos_mdrange/src_solution/: CMakeLists.txt  main.cpp
exercices/04-mandelbrot/kokkos_pipelined0/: CMakeLists.txt  Readme.md
exercices/04-mandelbrot/kokkos_pipelined0/src/: constants.h
exercices/04-mandelbrot/kokkos_range/cmake/: compiler_setup.cmake
exercices/04-mandelbrot/kokkos_range/src/: constants.h
exercices/04-mandelbrot/kokkos_range/src_solution/: Makefile.old  main.cpp  mandelbrot.h
exercices/05-laplace/doc/: readme_jacobi_openacc.txt  readme_slides.txt
exercices/05-laplace/kokkos/src/: DataContextKokkos.h  kokkos_shared.h  laplace2d_serial_kernel.h  main.cpp  params.h
exercices/05-laplace/kokkos/src_solution/: CMakeLists.txt  DataContext.h  common.h  laplace2d_kokkos_kernel.h  main.cpp
exercices/05-laplace/kokkos_mpi/: submit_kraken_gpu.sh
exercices/05-laplace/kokkos_mpi/src_solution/: check_results.h  main.cpp  params.h
exercices/05-laplace/serial/: DataContext.h  common.h  main.cpp  params.h
exercices/06-compute-pi/: Readme.md
exercices/06-compute-pi/cmake/: build_or_find_kokkos.cmake
exercices/06-compute-pi/src/: CMakeLists.txt
exercices/07-hierarchical-parallelism/kokkos/: CMakeLists.txt
exercices/07-hierarchical-parallelism/kokkos/cmake/: build_or_find_kokkos.cmake
exercices/07-hierarchical-parallelism/kokkos/src/: CMakeLists.txt  dotprod_team.cpp
exercices/07-hierarchical-parallelism/kokkos/src_solution/: dotprod_team.cpp
exercices/08-simd/: Readme.md
exercices/09-python/refresher/cython/: README.md  test.py
exercices/09-python/refresher/cython-template/: README.md
exercices/10-fortran/saxpy/kokkos-flcl/: axpy_kokkos_kernel.cpp  m_random_utils.F90
exercices/10-fortran/saxpy/kokkos-yakl/: axpy_kokkos_kernel.cpp  m_axpy_kokkos_kernel.F90  m_axpy_serial_kernel.F90
exercices/11-kokkos-kernels/: Readme.md
exercices/mpi_kokkos/: CMakeLists.txt  Readme.md  submit_kraken_cpu.sh  submit_kraken_gpu.sh
exercices/mpi_kokkos/cmake/: build_or_find_kokkos.cmake
exercises/: job.sh  readme.md
exercises/00-know-your-hardware/: .answers.md  Readme.md
exercises/00-know-your-hardware/deviceQuery/: .gitignore  job.sh
exercises/00-know-your-hardware/saxpy_cuda_cpp/: .gitignore  Makefile  README.md  job.sh  my_cuda_utils.cu  saxpy.cu
exercises/01-build-kokkos/: Readme.md
exercises/02-build-a-kokkos-app-with-cmake/: Readme.md
exercises/02-build-a-kokkos-app-with-cmake/kokkos-demo-application/cmake/: build_or_find_kokkos.cmake
exercises/03-saxpy/: Readme.md
exercises/03-saxpy/Kokkos-Lambda/: .gitignore  Makefile  Readme.md  job.sh  saxpy.cpp  saxpy_solution.cpp  saxpy_solution2.cpp
exercises/03-saxpy/OpenMP/: saxpy.cpp
exercises/03-saxpy/Serial/: .gitignore  saxpy.cpp
exercises/04-mandelbrot/: .gitignore  Readme.md
exercises/04-mandelbrot/doc/: Readme.md
exercises/04-mandelbrot/kokkos_mdrange/: CMakeLists.txt  Readme.md
exercises/04-mandelbrot/kokkos_mdrange/cmake/: build_or_find_kokkos.cmake
exercises/04-mandelbrot/kokkos_mdrange/src/: main.cpp
exercises/04-mandelbrot/kokkos_mdrange/src_solution/: kokkos_shared.h  mandelbrot.h
exercises/04-mandelbrot/kokkos_pipelined0/: Readme.md
exercises/04-mandelbrot/kokkos_pipelined0/src/: CMakeLists.txt  kokkos_shared.h  main.cpp
exercises/04-mandelbrot/kokkos_range/: CMakeLists.txt  Readme.md
exercises/04-mandelbrot/kokkos_range/src/: HostTimer.h  main.cpp  mandelbrot.h
exercises/04-mandelbrot/kokkos_range/src_solution/: CMakeLists.txt  kokkos_shared.h  (+1 more)
exercises/04-mandelbrot/serial/: CMakeLists.txt
exercises/04-mandelbrot/serial/src/: CMakeLists.txt  constants.h  main.cpp
exercises/05-laplace/: Readme.md
exercises/05-laplace/doc/: readme_jacobi_openmp.txt
exercises/05-laplace/kokkos/: CMakeLists.txt
exercises/05-laplace/kokkos_mpi/: CMakeLists.txt  Readme.md  submit_calypso_gpu.sh  submit_kraken_cpu.sh
exercises/05-laplace/serial/: .gitignore  Makefile  laplace2d_serial_kernel.h
exercises/06-compute-pi/: CMakeLists.txt  Readme.md
exercises/06-compute-pi/src/: compute_pi.cpp
exercises/06-compute-pi/src_solution/: compute_pi.cpp
exercises/07-hierarchical-parallelism/: Readme.md
exercises/07-hierarchical-parallelism/kokkos/benchmark/: BatchedDotProduct_bench.cpp  CMakeLists.txt
exercises/07-hierarchical-parallelism/openmp_target/: .gitignore  Makefile  dot_prod.cpp
exercises/09-python/pykokkos/: Readme.md
exercises/10-fortran/saxpy/kokkos-yakl/: CMakeLists.txt  Readme.md  kokkos-utils.cpp  m_kokkos_utils.F90  main.F90
exercises/11-kokkos-kernels/: Readme.md
exercises/12-resilience/: Readme.md  Readme.sh
exercises/13-mdspan/: Readme.md
exercises/14-profiling-tools/: Readme.md
exercises/14-profiling-tools/test/: CMakeLists.txt  test.cpp
exercises/mpi_kokkos/: .gitignore  Readme.md  kokkos_shared.h  main.cpp  submit_kraken_cpu.sh  submit_kraken_gpu.sh
exercises/mpi_kokkos/cmake/: config_mpi.cmake
modulefiles/kokkos-flcl/.src/: module  readme.md
modulefiles/kokkos-kernels/.src/: module  readme.md
modulefiles/kokkos/.src/: module  readme.md
modulefiles/yakl/.src/: module  readme.md
(+97 files in other folders)
